<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="description_image">Appestoque</string>
    
	<string name="app_nome">Estoque</string>	
	
	<string name="btn_produto">Produto</string>
	<string name="btn_estoque">Estoque</string>
	<string name="btn_pedido">Pedido</string>   
	<string name="btn_cliente">Cliente</string>
	<string name="btn_preferencia">Preferência</string>
	
	
	<string name="contentDescription"></string>
	
	<string name="mensagem_sincronismo">Buscando informações. Aguarde.</string>
	<string name="mensagem_sincronismo_conclusao">Processo de sincronismo concluido</string>
	
	<string name="mensagem_1">Sincronizando. Aguarde.</string>
	<string name="mensagem_2">Informação de rede inexistente.</string>
	<string name="mensagem_3">Conectividade inexistente</string>
	<string name="mensagem_4">Erro ao atualizar produto</string>
	<string name="mensagem_5">Nenhuma informação foi encontrada no sincronismo.</string>
	<string name="mensagem_6">Nenhuma produto foi retornado</string>
	<string name="mensagem_7">Nenhuma cliente foi retornado</string>
	<string name="mensagem_8">Não foi encontrado um produto com o número informado.</string>
	<string name="mensagem_9">Pedido sincronizado com sucesso.</string>
	<string name="mensagem_10">Pedido não sincronizado.</string>
	<string name="mensagem_servidor_nao_responde">Servidor não está respondendo.</string>
	<string name="mensagem_conexao">Verificando conexão.</string>
	
	<string name="mensagem_remover_problema">Não foi possível remover informação</string>
	<string name="mensagem_adicionar_problema">Não foi possível adicionar informação</string>
	<string name="mensagem_atualizar_informacao">Não foi possível atualizar informação</string>
	
	<string name="empty_sessions">No sessions found</string>
	<string name="no_notes">No Notes Yet</string>
	
	<string name="search_label">Google I/O</string>
	<string name="search_hint">Session keywords</string>
	
	
	<string name="titulo_barra">Session keywords</string>
	<string name="descricao_sincronizar">Sincronizar</string>
	
	
	
		<string name="botao_salvar">Salvar</string>
		<string name="botao_cancelar">Cancelar</string>
		
		<string name="titulo_produto">Produto</string>
		<string name="titulo_cliente">Cliente</string>
		<string name="titulo_pedido">Pedido</string>
		<string name="titulo_item">Item</string>
		
		<string name="titulo_preferencia">Preferência</string>
		<string name="edt_uuid">Identificador</string>
		<string name="edtEmail">E-mail</string>
		<string name="edtSenha">Senha</string>
		
		<string name="titulo_menu">Menu</string>	
		<string name="texto_busca">Pesquisar por Código</string>
		<string name="titulo_busca">Pesquisar por Código</string>	
		<string name="pasta_externa_imagens">appestoque-imagens</string>
		
		<!--CLIENTE-->
		<string name="cliente_cnpj">CNPJ</string>
		<string name="cliente_nome">Nome</string>
		<string name="cliente_endereco">Endereco</string>
		<string name="cliente_numero">Número</string>
		<string name="cliente_cep">Cep</string>
		<string name="cliente_complemento">Complemento</string>
		<string name="cliente_bairro">Bairro</string>
		<string name="cliente_cidade">Cidade</string>
		
		<!--PEDIDO-->
		<string name="pedido_cliente">Cliente</string>
		<string name="pedido_numero">Número</string>
		<string name="pedido_data">Data</string>
		<string name="pedido_obs">Observação</string>
		
		<!--ITEM-->
		<string name="item_nome">Nome</string>
		<string name="item_numero">Número</string>
		<string name="item_produto">Produto</string>
		<string name="item_quantidade">Quantidade</string>
		<string name="item_valor">Valor</string>
		<string name="item_total">Total</string>
		<string name="item_obs">Observação</string>
		
		<!--PRODUTO-->
		<string name="produto_nome">Nome</string>
		<string name="produto_numero">Número</string>
		<string name="produto_valor">Valor</string>
		<string name="produto_quantidade">Quantidade</string>
		
		<!--MENU ITEM-->
		<string name="menu_visualizar">Visualizar</string>
		<string name="menu_criar_pedido">Criar pedido</string>
		<string name="menu_listar_pedidos">Listar pedido(s)</string>
		<string name="menu_sincronizar">Sincronizar</string>
		<string name="menu_editar">Editar</string>
		<string name="menu_remover">Remover</string>
		
		<!--PADRÃO MÁSCARA-->
		<string name="mascara_data_ddMMyyyy">dd/MM/yyyy</string>
		
		<!--BOTÃO-->
		<string name="botao_adicionar">Adicionar</string>
		
		
		<string name="hello">Hello World</string>
        <string name="app_name">Customized Tabs!</string>
        
        <string name="lbl_numero">Número</string>
        <string name="lbl_quantidade">Quantidade</string>
        <string name="lbl_valor">Valor</string>
        <string name="lbl_total">Total</string>
        <string name="lbl_obs">Obs</string>
        
        <string name="description">appestoque contentDescription</string>
        
        <string name="mensagem_remover_sucesso">Informação removida com sucesso.</string>
        <string name="mensagem_pedido_sincronizado">Não será possível a ação porque o pedido de venda já foi sincronizado.</string>
        <string name="mensagem_pedido_zerado">Não será possível a ação porque o pedido de venda está com o valor total igual a zero.</string>
        
        <!--labels-->
        <string name="nome">Nome</string>
        <string name="cnpj">CNPJ</string>
        <string name="endereco">Endereço</string>
        <string name="numero">Número</string>
        <string name="cep">Cep</string>
        <string name="complemento">Complemento</string>
        <string name="bairro">Bairro</string>
        <string name="cidade">Cidade</string>
        
        <string name="cliente_label">Cliente</string>
		<string name="numero_label">Número</string>
		<string name="data_label">Data</string>
		<string name="obs_label">Observação</string>
		<string name="total_label">Total</string>
        
        
        <!--dialog-->
        <string name="sim">Sim</string>
        <string name="nao">Não</string>
        <string name="ok">Ok</string>
        
        <!--message-->
        <string name="msg_criar_pedido_venda">Deseja criar um pedido de venda para este novo cliente ?</string>
        <string name="msg_validar_nome">Nome informado é inválido</string>
        <string name="msg_validar_cnpj">CNPJ informado é inválido</string>
        <string name="msg_validar_tamanho_cnpj">CNPJ informado com tamanho inválido</string>
        <string name="msg_validar_endereco">Endereço informado é inválido</string>
        <string name="msg_validar_numero">Número informado é inválido</string>
        <string name="msg_validar_cep">Cep informado é inválido</string>
        <string name="msg_validar_tamanho_cep">Cep informado com tamanho inválido</string>
        <string name="msg_validar_complemento">Complemento informado é inválido</string>
        <string name="msg_validar_bairro">Bairro informado é inválido</string>
        <string name="msg_validar_cidade">Cidade informada é inválida</string>
        <string name="msg_validar_produto_valor_minimo">Este produto não pode ser vendido porque o valor mínimo é</string>
        <string name="msg_validar_item_duplicado">Este item já foi lançado para este pedido de venda.</string>
        
        <string name="msg_obrigatorio_quantidade_valor">Desculpe, mas é necessário informar a quantidade e o valor do item.</string>
        
        <string name="msg_pedido_nao_encontrado">O pedido não foi encontrado.</string>
        <string name="msg_pedido_sincronizado_remover">Não será possível remover o o pedido porque já foi sincronizado.</string>
        <string name="msg_item_chave_nao_localizada">Chave do pedido no item não foi localizada.</string>
        
        <string name="msg_pedido_confirmar_exclusao">Tem certeza que deseja remover o pedido ?</string>
        
        <string name="msg_pedido_removido">Pedido removido com sucesso.</string>
        <string name="msg_item_removido">Iten(s) removido(s) com sucesso.</string>
        
        <string name="msg_remover_pedido_sincronizado">Desculpe, mas não será possível remover um pedido sincronizado.</string>
        
        <string name="mensagem_erro_listar_cliente_pedido">Erro ao tentar localizar pedido(s) por cliente.</string>
        <string name="mensagem_info_cliente_pedido">Desculpe, mas não foi encontrado nenhum pedido para o cliente informado.</string>
        
        
        
        
        <string name="texto_padrao">descrição de conteúdo</string>
        <string name="texto_quantidade">Qtd</string>
        <string name="texto_numero">Número</string>
        <string name="texto_valor">Valor</string>
        <string name="texto_valor_total">Total</string>
        <string name="texto_observacao">Observação</string>
	
</resources>