<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@color/fundo_branco">
	
	<LinearLayout style="@style/Titulo_Barra">
		<ImageButton style="@style/Titulo_Barra_Acao"
			android:src="@drawable/btn_iniciar"
			android:onClick="onIniciarClick" />
		<ImageView style="@style/Titulo_Barra_Separador" />	
		<TextView style="@style/TitleBarText" 
				  android:text="@string/titulo_cliente" />
		<ImageView style="@style/Titulo_Barra_Separador" />		  
		<ImageButton style="@style/Titulo_Barra_Acao"
			android:src="@drawable/btn_retornar"
			android:onClick="onRetornarClick" />		  
	</LinearLayout>
	
	<ScrollView android:layout_height="wrap_content" 
				android:id="@+id/scrollViewCliente"
				android:layout_width="fill_parent">
				
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
						android:orientation="vertical" 
						android:layout_width="fill_parent"
						android:layout_height="fill_parent" 
						android:background="@color/fundo_branco">		
	
			<TextView android:id="@+id/txtCnpj" 
					  android:text="@string/cliente_cnpj"
					  android:textColor="#000000" 
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"
					  style="@style/Titulo"/>
			<TextView android:id="@+id/edtCnpj" 
					  style="@style/SubTitulo"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"/>
			<TextView android:id="@+id/txtNome" 
					  android:text="@string/cliente_nome"
					  android:textColor="#000000" 
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"
					  style="@style/Titulo"/>
			<TextView android:id="@+id/edtNome" 
					  style="@style/SubTitulo"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"/>
			<TextView android:id="@+id/txtEndereco" 
					  android:text="@string/cliente_endereco"
					  android:textColor="#000000" 
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"
					  style="@style/Titulo"/>
			<TextView android:id="@+id/edtEndereco" 
					  style="@style/SubTitulo"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"/>	 	  
			<TextView android:id="@+id/txtNumero" 
					  android:text="@string/cliente_numero"
					  android:textColor="#000000" 
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"
					  style="@style/Titulo"/>
			<TextView android:id="@+id/edtNumero" 
					  style="@style/SubTitulo"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"/>	 	  
			<TextView android:id="@+id/txtCep" 
					  android:text="@string/cliente_cep"
					  android:textColor="#000000" 
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"
					  style="@style/Titulo"/>
			<TextView android:id="@+id/edtCep" 
					  style="@style/SubTitulo"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"/>
			<TextView android:id="@+id/txtComplemento" 
					  android:text="@string/cliente_complemento"
					  android:textColor="#000000" 
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"
					  style="@style/Titulo"/>
			<TextView android:id="@+id/edtComplemento" 
					  style="@style/SubTitulo"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"/>
			<TextView android:id="@+id/txtBairro" 
					  android:text="@string/cliente_bairro"
					  android:textColor="#000000" 
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"
					  style="@style/Titulo"/>
			<TextView android:id="@+id/edtBairro" 
					  style="@style/SubTitulo"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"/>
			<TextView android:id="@+id/txtCidade" 
					  android:text="@string/cliente_cidade"
					  android:textColor="#000000" 
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"
					  style="@style/Titulo"/>
			<TextView android:id="@+id/edtCidade" 
					  style="@style/SubTitulo"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent"/>
				 	  
		</LinearLayout>
	</ScrollView>				 	  
				 	  
</LinearLayout>