<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/fundo_branco"
    android:orientation="vertical">
    
	<LinearLayout style="@style/Titulo_Barra">
		<ImageButton style="@style/Titulo_Barra_Acao"
			android:src="@drawable/btn_iniciar"
			android:onClick="onIniciarClick" 
			android:contentDescription="@string/texto_padrao"/>
		<ImageView style="@style/Titulo_Barra_Separador" 
		    android:contentDescription="@string/texto_padrao" />	
		<TextView style="@style/TitleBarText" 
		    android:text="@string/titulo_preferencia" />
	</LinearLayout>

	<ScrollView android:layout_height="0dip" android:id="@+id/scrollView1"
		android:layout_width="fill_parent" android:layout_weight="3">

	    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/layout_padrao">
	    	<TextView 	android:id="@+id/txtEmail"
        	  			android:text="@string/edtEmail"
        	  			android:layout_width="fill_parent"
	          		  	android:layout_height="wrap_content"
        	  			style="@style/textview_padrao"/> 
        	<EditText 	android:id="@+id/edtEmail"
        	          	android:inputType="textEmailAddress"
        	          	android:layout_width="fill_parent"
	          		  	android:layout_height="wrap_content"
	          		  	android:layout_below="@+id/txtEmail" />
        	<TextView 	android:id="@+id/txtSenha"
        	  			android:text="@string/edtSenha"
        	  			android:layout_width="fill_parent"
	          		  	android:layout_height="wrap_content"
        	  			android:layout_below="@+id/edtEmail"
        	  			style="@style/textview_padrao"/> 
        	<EditText 	android:id="@+id/edtSenha"
        	          	android:inputType="textPassword"
        	          	android:layout_width="fill_parent"
	          		  	android:layout_height="wrap_content"
	          		  	android:layout_below="@+id/txtSenha" />
	    </RelativeLayout>    
	</ScrollView>

	<LinearLayout
	    style="@android:style/ButtonBar"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#ffffffff"
	    android:orientation="horizontal" >

		<Button android:layout_width="0dip" android:layout_height="wrap_content"
			android:layout_weight="1" android:onClick="onSalvarClick"
			android:text="@string/botao_salvar" 
			android:background="@drawable/btn_green"
			style="@style/ButtonText"/>

		<Button
		    style="@style/ButtonText"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:background="@drawable/btn_green"
		    android:onClick="onCancelarClick"
		    android:text="@string/botao_cancelar" />

	</LinearLayout>
</LinearLayout>