<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@color/fundo_branco">
	<LinearLayout style="@style/Titulo_Barra">
		<TextView style="@style/TitleBarText" 
				  android:text="@string/titulo_pedido" />
	</LinearLayout>
			<TextView android:id="@+id/txtCliente" 
					  android:text="@string/pedido_cliente"
					  android:textColor="#000000"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent" 
					  style="@style/SessionTitle"/>
			<EditText android:layout_width="fill_parent" 
			          android:id="@+id/edtCliente" 
			          android:layout_height="wrap_content" android:enabled="false"/>
			<TextView android:id="@+id/txtNumero" 
					  android:text="@string/pedido_numero"
					  android:textColor="#000000"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent" 
					  style="@style/SessionTitle"/>
			<EditText android:id="@+id/edtNumero" android:layout_height="wrap_content" android:layout_width="100dip"></EditText>
			<TextView android:id="@+id/txtData" 
					  android:text="Data"
					  android:textColor="#000000"
					  android:layout_height="wrap_content" 
				 	  android:layout_width="fill_parent" 
					  style="@style/SessionTitle"/>
			<DatePicker android:id="@+id/data" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>
