<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		  android:baselineAligned="false"  
			  android:layout_width="fill_parent" 
			  android:layout_height="fill_parent"
			  android:padding="6dip">
	<LinearLayout android:orientation="vertical"
		android:layout_width="0dip" android:layout_weight="1"
		android:layout_height="fill_parent">
		<TextView android:id="@+id/produto" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			style="@style/SessionTitle" />
		<LinearLayout android:orientation="horizontal"
					  android:layout_width="fill_parent" 
					  android:layout_height="wrap_content">
			<TextView android:text="@string/lbl_numero"
					  android:textColor="#000000" 
					  android:layout_height="wrap_content"
					  android:layout_width="wrap_content" 
					  style="@style/SessionTitle" />
			<TextView android:id="@+id/numero" 
			          android:layout_width="wrap_content"
				      android:layout_height="wrap_content" 
				      style="@style/SessionSubtitle" 
					  android:layout_marginLeft="5dip"/>
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">

			<TextView android:text="@string/lbl_quantidade"
				android:textColor="#000000" android:layout_height="wrap_content"
				android:layout_width="wrap_content" style="@style/SessionTitle" />
			<TextView android:id="@+id/quantidade" android:layout_width="wrap_content"
				android:layout_height="wrap_content" style="@style/SessionSubtitle" 
				android:layout_marginLeft="5dip"/>
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">

			<TextView android:text="@string/lbl_valor"
				android:textColor="#000000" android:layout_height="wrap_content"
				android:layout_width="wrap_content" style="@style/SessionTitle" />
			<TextView android:id="@+id/valor" android:layout_width="wrap_content"
				android:layout_height="wrap_content" style="@style/SessionSubtitle" 
				android:layout_marginLeft="5dip"/>
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
					  android:layout_width="fill_parent" 
					  android:layout_height="wrap_content">
			<TextView android:text="@string/lbl_total"
				android:textColor="#000000" android:layout_height="wrap_content"
				android:layout_width="wrap_content" style="@style/SessionTitle" />
			<TextView android:id="@+id/valorTotal" android:layout_width="wrap_content"
				android:layout_height="wrap_content" style="@style/SessionSubtitle" 
				android:layout_marginLeft="5dip"/>
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
					  android:layout_width="fill_parent" 
					  android:layout_height="wrap_content">
			<TextView android:text="@string/lbl_obs"
				android:textColor="#000000" android:layout_height="wrap_content"
				android:layout_width="wrap_content" style="@style/SessionTitle" />
			<TextView android:id="@+id/obs" android:layout_width="wrap_content"
				android:layout_height="wrap_content" style="@style/SessionSubtitle" 
				android:layout_marginLeft="5dip"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>